--- a/Falla2018/Falla2018.iOS/Falla2018.iOS.csproj
+++ b/Falla2018/Falla2018.iOS/Falla2018.iOS.csproj
@@ -128,4 +128,16 @@
       <Name>Falla2018</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\falla.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\facebook_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\instagram_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\twitter_logo.png" />
+  </ItemGroup>
 </Project>
