--- a/Falla2018.API/Web.config
+++ b/Falla2018.API/Web.config
@@ -10,14 +10,13 @@
   </configSections>
   <connectionStrings>
     <remove name="DefaultConnection" />
-    <add name="DefaultConnection" 
-    connectionString="Data Source=ENVY\ENVY;Initial Catalog=Falla2018;Integrated Security=True" 
-    providerName="System.Data.SqlClient" />
-    <!--<add name="DefaultConnection" 
-    connectionString="Data Source=10.61.44.196;Initial Catalog=antoniol_falla;Persist Security Info=True;User ID=antoniol_bd;Password=0501120608Ale."
+    <!--<add name="DefaultConnection"
+    connectionString="Data Source=ENVY\ENVY;Initial Catalog=db736949933;Integrated Security=True"
     providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" 
+    connectionString="Data Source=db736949933.db.1and1.com;Initial Catalog=db736949933;User Id=dbo736949933;Password=0501120608Ale*"
+    providerName="System.Data.SqlClient" />
   </connectionStrings>
-
   <appSettings></appSettings>
   <system.web>
     <authentication mode="None" />
