--- a/Falla2018.Backend/Web - Copia.config
+++ b/Falla2018.Backend/Web - Copia.config
@@ -10,13 +10,13 @@
   </configSections>
   <connectionStrings>
     <remove name="DefaultConnection" />
-    <add name="DefaultConnection"
-    connectionString="Data Source=ENVY\ENVY;Initial Catalog=db736949933;Integrated Security=True"
-    providerName="System.Data.SqlClient" />
-    <!--<add name="DefaultConnection" 
-    connectionString="Data Source=db736949933.db.1and1.com;Initial Catalog=db736949933;User Id=dbo736949933;Password=0501120608Ale*"
+    <!--<add name="DefaultConnection"
+    connectionString="Data Source=ENVY\ENVY;Initial Catalog=Falla2018;Integrated Security=True"
     providerName="System.Data.SqlClient" />-->
-    </connectionStrings>
+    <add name="DefaultConnection" 
+    connectionString="Data Source=db736715416.db.1and1.com;Initial Catalog=db736715416;Persist Security Info=True;User ID=db736715416;Password=0501120608Ale*"
+    providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -30,7 +30,6 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <modules>
