--- a/Falla2018.Backend/Web.config
+++ b/Falla2018.Backend/Web.config
@@ -10,18 +10,24 @@
   </configSections>
   <connectionStrings>
     <remove name="DefaultConnection" />
-    <add name="DefaultConnection"
-    connectionString="Data Source=ENVY\ENVY;Initial Catalog=db736949933;Integrated Security=True"
-    providerName="System.Data.SqlClient" />
-    <!--<add name="DefaultConnection" 
-    connectionString="Data Source=db736949933.db.1and1.com;Initial Catalog=db736949933;User Id=dbo736949933;Password=0501120608Ale*"
+    <!--<add name="DefaultConnection"
+    connectionString="Data Source=ENVY\ENVY;Initial Catalog=db737423551;Integrated Security=True"
     providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" 
+    connectionString="Data Source=db737423551.db.1and1.com;Initial Catalog=db737423551;User Id=dbo737423551;Password=0501120608Ale*"
+    providerName="System.Data.SqlClient" />
     </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="AdminUser" value="alorenzoesparza@ono.com" />
+    <add key="AdminPassWord" value="Antonio1." />
+    <add key="AdminMail" value="aac@aacvalencia.es" />
+    <add key="AdminPassWordMail" value="0501120608Ale*" />
+    <add key="SMTPName" value="smtp.1und1.de" />
+    <add key="SMTPPort" value="465" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
